Ternary expressions are wrapped in parentheses

--- a/Telerik.RazorConverter.Tests.Integration/TestCases/TestCase27.cshtml
+++ b/Telerik.RazorConverter.Tests.Integration/TestCases/TestCase27.cshtml
@@ -1,5 +1,7 @@
 ﻿@inherits Drg.M3.Client.M3ViewPage
 
+<option value="@ug.Id" @(Model!=null && Model.UserGroups.Contains(ug) ? "selected" : "")>@ug.Name</option>
+
         public void Page_Load()
         {
         }
