--- a/Telerik.RazorConverter.Tests.Integration/TestCases/TestCase27.cshtml
+++ b/Telerik.RazorConverter.Tests.Integration/TestCases/TestCase27.cshtml
@@ -1,5 +1,7 @@
 ﻿@inherits Drg.M3.Client.M3ViewPage
 
+@((int)Model.ReferenceType)
+
     @using (Html.BeginFormCurrentAction(new { id = "frmEdit", Class="large"})) {
         <div>some text here but don't wrap it</div>
     }
